--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ group 'wang'
 version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
+apply plugin: 'idea'
 apply plugin: 'application'
 
 sourceCompatibility = 1.8
