--- a/book-club-api/build.gradle
+++ b/book-club-api/build.gradle
@@ -1,3 +1,5 @@
 dependencies {
     compile "org.immutables:value:2.5.5"
+    compile "com.fasterxml.jackson.core:jackson-core"
+    compile "com.fasterxml.jackson.core:jackson-annotations"
 }
