--- a/book-club-api/build.gradle
+++ b/book-club-api/build.gradle
@@ -1,5 +1,6 @@
 dependencies {
     compile "org.immutables:value:2.5.5"
-    compile "com.fasterxml.jackson.core:jackson-core"
-    compile "com.fasterxml.jackson.core:jackson-annotations"
+    compile "com.fasterxml.jackson.core:jackson-core:2.9.0"
+    compile "com.fasterxml.jackson.core:jackson-annotations:2.9.1"
+    compile "com.fasterxml.jackson.core:jackson-databind:2.9.1"
 }
