--- a/book-club-server/build.gradle
+++ b/book-club-server/build.gradle
@@ -9,3 +9,7 @@ dependencies {
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
+
+run {
+    args 'server', 'var/conf/server.yml'
+}
